--- a/compose_app/app/src/main/res/values/strings.xml
+++ b/compose_app/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">compose_app</string>
+    <string name="bottom_home">首页</string>
+    <string name="bottom_project">项目</string>
+    <string name="bottom_square">广场</string>
+    <string name="bottom_public_num">公众号</string>
+    <string name="bottom_mine">我的</string>
 </resources>
